# grb_amateur

./: .gitignore  CLAUDE.md  README.md  compose-core.yml  compose-prod.yml  compose-staging.yml  docker-compose.yml  justfile  nginx.conf  nginx_staging.conf
web_backend/: Dockerfile  README.md  db.py  justfile  main.py  push_image.sh  pyproject.toml  smtp_client.py
web_backend/alembic/: env.py
web_backend/alembic/versions/: 09e7ce4dfd5f_add_created_at_alert.py  17a237bffe60_remove_relation_between_event_position_.py  5c4410c1c914_add_user_table.py  6701deceed54_add_observation_image_table.py  6f7dbd2178cc_create_table_event_alert.py  87c3f6f5420e_add_relation_between_grb_positions_and_.py  8a1474297374_add_cols_password_and_fullname_to_user_.py  8bbe7f010891_create_unique_constraints_on_users_email.py  9582a0754f6a_add_relationship_one_to_many_event_.py  9728c918b09e_add_table_grb_positions.py  a8216735fcf4_add_confirmation_email.py  b19e0312f233_create_table_observations.py  b64017eb47e8_add_receive_notification_to_user.py  c297be201d37_removes_too_fields_in_observation_table.py  d3b25763c4c3_seed_users_table_in_grb_db.py  effe51643230_add_unique_constraints_on_email_in_users.py  effe5164323_add_unique_constraints_on_email_in_users.py  fe6e31456864_alter_table_grb_alert_with_null_true.py
web_backend/grb_alerts/: models.py  routes.py  service.py
web_backend/observations/: models.py  routes.py  service.py
web_backend/seed/: seed.py
web_backend/test/unit/users/: __init__.py  test_service.py
web_backend/users/: auth.py  models.py  routes.py  service.py
(+53 files in other folders)
